--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 body{
     background-color: beige;
 }
+
+h1{
+    color: blue;
+    transition: color 0.5s ease-in-out;
+}
+
+
+.active{
+    color:tomato;
+}
